added add category and add size in create product form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4434,7 +4434,10 @@ input[type="button"].btn-block {
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
-
+.card-img {
+  width: 600px; 
+  height: 400px;
+}
 .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
