--- a/templates/products/shop.html
+++ b/templates/products/shop.html
@@ -29,31 +29,19 @@
             <!-- Size Start -->
               <div class="mb-5">
                   <h5 class="font-weight-semi-bold mb-4">Filter by size</h5>
+                  
                   <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                       <input type="checkbox" class="custom-control-input" value = "allsize" name ="size"  id="size-all">
                       <label class="custom-control-label" for="size-all">All Size</label>
-                      <span class="badge border font-weight-normal">1000</span>
+                      
                   </div>
+                  {% for s in size  %}
                   <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                      <input type="checkbox" class="custom-control-input" name ="size" value = " Medium"   id="size-1">
-                      <label class="custom-control-label" for="size-1">M</label>
-                      <span class="badge border font-weight-normal">15000</span>
+                      <input type="checkbox" class="custom-control-input" name ="size" value = "{{s.name}}"  id="{{s.id}}">
+                      <label class="custom-control-label" for="{{s.id}}">{{s.name}}</label>
+                      
                   </div>
-                  <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                      <input type="checkbox" class="custom-control-input" name = "size" value = "Small"  id="size-2">
-                      <label class="custom-control-label" for="size-2" >S</label>
-                      <span class="badge border font-weight-normal">295</span>
-                  </div>
-                  <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                      <input type="checkbox" class="custom-control-input" name = "size" value = "Large" id="size-3">
-                      <label class="custom-control-label" for="size-3">L</label>
-                      <span class="badge border font-weight-normal">246</span>
-                  </div>
-                  <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                      <input type="checkbox" class="custom-control-input" name = "size" id="size-5">
-                      <label class="custom-control-label" for="size-5">XL</label>
-                      <span class="badge border font-weight-normal">168</span>
-                  </div>
+                  {% endfor %}
               </div>
               <input type="submit" class="btn btn-dark" value ="Apply">
               </form>
@@ -93,10 +81,10 @@
                 </div>
                 {% for p in page_obj %}
               <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
-                  <div class="card product-item border-0 mb-4">
-                      <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
+                  <div class=" card product-item border-0 mb-4">
+                      <div class=" card-header product-img position-relative  bg-transparent border p-0">
                         <a href="{% url 'detail' p.id %}" >
-                          <img class="img-fluid h-100 w-100" src="{{p.image.url}}" alt="">
+                          <img class="card-img" src="{{p.image.url}}" alt="">
                         </a>  
                       </div>
                       <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
