--- a/templates/products/shopdetail.html
+++ b/templates/products/shopdetail.html
@@ -41,32 +41,18 @@
                 </div>
                 <small class="pt-1">(50 Reviews)</small>
             </div>
-            <h3 class="font-weight-semi-bold mb-4">{{products.company}}</h3>
+            <h3 class="font-weight-semi-bold mb-4">Company: {{products.company}}</h3>
             <h3 class="font-weight-semi-bold mb-4">Rs.{{products.price}}</h3>
             <p class="mb-4">{{products.description}}</p>
             <div class="d-flex mb-3">
                 <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
                 <form>
+                    {% for s in size %}
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="custom-control-input" id="size-1" name="size">
-                        <label class="custom-control-label" for="size-1">XS</label>
+                        <input type="radio" class="custom-control-input" id="{{s.id}}" name="size" value="{{s.name}}">
+                        <label class="custom-control-label" for="{{s.id}}">{{s.name}}</label>
                     </div>
-                    <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="custom-control-input" id="size-2" name="size">
-                        <label class="custom-control-label" for="size-2">S</label>
-                    </div>
-                    <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="custom-control-input" id="size-3" name="size">
-                        <label class="custom-control-label" for="size-3">M</label>
-                    </div>
-                    <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="custom-control-input" id="size-4" name="size">
-                        <label class="custom-control-label" for="size-4">L</label>
-                    </div>
-                    <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="custom-control-input" id="size-5" name="size">
-                        <label class="custom-control-label" for="size-5">XL</label>
-                    </div>
+                    {% endfor %}
                 </form>
             </div>
             <div class="d-flex mb-4">
