--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -1,5 +1,6 @@
 {% extends 'products/base.html' %}
 {%load  static%}
+{% load custom_tag %}
 {% block category %}
     <div class="col-lg-3 d-none d-lg-block">
         <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
@@ -65,9 +66,11 @@
             </div>
         </a>
     </div>
-    {% endblock  %}
+    {% endblock  %} 
 {% block content %} 
 
+
+ 
 {% for message in messages  %}
 <div class="alert {{message.tags}} alert-dismissible" role="alert">
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
