fixed the bugs in product module

--- a/templates/products/shop.html
+++ b/templates/products/shop.html
@@ -16,7 +16,7 @@
     <div class="row px-xl-5">
         <!-- Shop Sidebar Start -->
           <div class="col-lg-3 col-md-12">
-              <form action="" method="GET">
+              <form action="" method="GET" id="filterform">
               <!-- Price Start -->
               <div class="border-bottom mb-4 pb-4">
                   <h5 class="font-weight-semi-bold mb-4">Filter by category</h5>
@@ -146,6 +146,7 @@
       <!-- Shop Product End -->
   </div>
 </div>
+
 <!-- Shop End -->
 
 {% endblock %}
