--- a/templates/productowner/base.html
+++ b/templates/productowner/base.html
@@ -47,7 +47,6 @@
                     </div>
                 </form>
             </div>
-            
             <div class="col-lg-3 col-6 text-right">
                 <a href="" class="btn border">
                     <i class="fas fa-heart text-primary"></i>
@@ -57,9 +56,11 @@
                     <i class="fas fa-shopping-cart text-primary"></i>
                     <span class="badge">0</span>
                 </a>
-                <a href="{% url 'pprofile' user.id %}">
-                    <img src="{{request.user.profile.url}}" class="rounded-0 border border-5 text-primary" id="profileimg" alt="">
+                {% with id=request.user.id %}
+                <a href="" class="rounded-circle">
+                    <img src="{{request.user.profile}}"  alt="">
                 </a>
+                {% endwith %}
             </div>
         </div>
     </div>
