--- a/templates/products/base.html
+++ b/templates/products/base.html
@@ -57,9 +57,15 @@
                     <i class="fas fa-shopping-cart text-primary"></i>
                     <span class="badge">0</span>
                 </a>
+                {% if user.groups.all.0.name == 'product_admin' %}
                 <a href="{% url 'pprofile' user.id %}" class="rounded-0 border border-5 text-primary">
                     <img src="{{request.user.profile.url}}" class="rounded-5  text-primary" id="profileimg" alt="">
                 </a>
+                {% else %}
+                 <a href="{% url 'cprofile' user.id %}" class="rounded-0 border border-5 text-primary">
+                    <img src="{{request.user.profile.url}}" class="rounded-5  text-primary" id="profileimg" alt="">
+                </a> 
+                {% endif %} 
             </div>
         </div>
     </div>
