Created cart and cartitem model and backend to add products in cart

--- a/templates/products/createProduct.html
+++ b/templates/products/createProduct.html
@@ -42,6 +42,8 @@
                             </div>
                             {{form.price.label}}
                             {{form.price}}
+                            {{form.inventory.label}}
+                            {{form.inventory}}
                             {{form.description.label}}
                             {{form.description}}
                             <input type="text" name="created_by" value="{{request.user}}" class="form-control mb-3" required="" data-validation-required-message="Please enter your name" disabled="True" id="id_created_by">
