--- a/templates/products/shopdetail.html
+++ b/templates/products/shopdetail.html
@@ -46,44 +46,64 @@
             <p class="mb-4">{{products.description}}</p>
             <div class="d-flex mb-3">
                 <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
-                <form>
+                
                     {% for s in size %}
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="custom-control-input" id="{{s.id}}" name="size" value="{{s.name}}">
+                        <input type="radio" class="custom-control-input size" onclick="displayRadioValue()" id="{{s.id}}" name="size" value="{{s.name}}">
                         <label class="custom-control-label" for="{{s.id}}">{{s.name}}</label>
                     </div>
                     {% endfor %}
-                </form>
+                    <div id="clothsize"></div>
+            
             </div>
             <div class="d-flex mb-4">
                 <p class="text-dark font-weight-medium mb-0 mr-3">Colors:</p>
-                <form>
+            
                     {% for c in color %}
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="custom-control-input" id="{{c.id}}"  name="color" value="{{c.name}}">
+                        <input type="radio" class="custom-control-input"  id="{{c.id}}" onclick="displayRadioValue()"  name="color" value="{{c.name}}">
                         <label class="custom-control-label" for="{{c.id}}">{{c.name}}</label>   
                     </div>
                     {% endfor %}
+                    <div id="clothcolor"></div>
     
+            </div>
+            <div class="d-flex align-items-center mb-4 pt-2"> 
+                    <div class="input-group quantity mr-3" style="width: 130px;">
+                        <div class="input-group-btn">
+                            <button class="btn btn-primary btn-minus" >
+                            <i class="fa fa-minus"></i>
+                            </button>
+                        </div>  
+                        <input type="number" name="quantity" id = "quantity" class="form-control bg-secondary text-center" value="1">
+                        <div class="input-group-btn">
+                            <button class="btn btn-primary btn-plus">
+                                <i class="fa fa-plus"></i>
+                            </button>
+                        </div>
+                    </div>               
+                    {% comment %} <div class="row">
+                        <div class="col-sm-3 mx-auto">
+                            <div class="input-group">
+                                <span class="input-group-prepend">
+                                    <button type="button" class="btn btn-outline-secondary btn-number"  data-type="minus" data-field="quant[1]">
+                                        <span class="fa fa-minus"></span>
+                                    </button>
+                                </span>
+                                <input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
+                                <span class="input-group-append">
+                                    <button type="button" class="btn btn-outline-secondary btn-number" data-type="plus" data-field="quant[1]">
+                                        <span class="fa fa-plus"></span>
+                                    </button>
+                                </span>
+                            </div>
+                        </div>
+                    </div> {% endcomment %}
+                <form id="post-form">
+                    {% csrf_token %}
+                    <button id = "submit" type="submit" class="btn btn-primary px-3">add to cart</button>
                 </form>
-            </div>
-            <div class="d-flex align-items-center mb-4 pt-2">
-                <div class="input-group quantity mr-3" style="width: 130px;">
-                    <div class="input-group-btn">
-                        <button class="btn btn-primary btn-minus" >
-                        <i class="fa fa-minus"></i>
-                        </button>
-                    </div>
-                    <input type="text" class="form-control bg-secondary text-center" value="1">
-                    <div class="input-group-btn">
-                        <button class="btn btn-primary btn-plus">
-                            <i class="fa fa-plus"></i>
-                        </button>
-                    </div>
-                </div>
-                <button class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
-            </div>
-            
+            </div>       
         </div>
     </div>
     <div class="row px-xl-5">
@@ -225,5 +245,42 @@
         </div>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+<script type="text/javascript">
+    function displayRadioValue() {
+        var ele = document.getElementsByName('size');
+        var ele1 = document.getElementsByName('color');
+        
+        for(i = 0; i < ele.length; i++) {
+            if(ele[i].checked){
+            document.getElementById("clothsize").value = ele[i].value;
+            }
+        }
+        for(i = 0; i < ele1.length; i++) {
+            if(ele1[i].checked){
+            document.getElementById("clothcolor").value = ele1[i].value;
+            }
+        }
+    }
+    $("#submit").click(function(e){
+        
+        e.preventDefault();
+        
+        $.ajax({
+            type:'POST',
+            url:'',
+            data:{
+                clothsize:$('#clothsize').val(),
+                clothcolor:$('#clothcolor').val(),
+                quantity:$('#quantity').val(),
+                csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val(),
+            },
+            success: function (data){
+                
+            }
+        });
+    });
+</script>
 <!-- Products End -->
 {% endblock %}
