--- a/templates/customer/cart.html
+++ b/templates/customer/cart.html
@@ -3,8 +3,13 @@
 {% load custom_tag %}
 {% load widget_tweaks %}
 {% block content %}
-
 <div class="container-fluid pt-5">
+    {% for message in messages  %}
+    <div class="alert {{message.tags}} alert-dismissible" role="alert">
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
+        <strong>{{message}}</strong>
+    </div>
+    {% endfor %}
     <div class="row px-xl-5">
         <div class="col-lg-8 table-responsive mb-5">
             <table class="table table-bordered text-center mb-0">
