--- a/templates/products/shopdetail.html
+++ b/templates/products/shopdetail.html
@@ -3,34 +3,14 @@
 <!-- Shop Detail Start -->
 
 <div class="container-fluid py-5">
+
     <div class="row px-xl-5">
         <div class="col-lg-5 pb-5">
-            {% comment %} <div id="product-carousel" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner border"> {% endcomment %}
-
-                    {% comment %} <div class="carousel-item active"> {% endcomment %}
-                        <img class="w-100 h-100" src="{{products.image.url}}" alt="Image">
-                    {% comment %} </div>
-                    <div class="carousel-item">
-                        <img class="w-100 h-100" src="img/product-2.jpg" alt="Image">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="w-100 h-100" src="img/product-3.jpg" alt="Image">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="w-100 h-100" src="img/product-4.jpg" alt="Image">
-                    </div>
-                </div> {% endcomment %}
-                {% comment %} <a class="carousel-control-prev" href="#product-carousel" data-slide="prev">
-                    <i class="fa fa-2x fa-angle-left text-dark"></i>
-                </a>
-                <a class="carousel-control-next" href="#product-carousel" data-slide="next">
-                    <i class="fa fa-2x fa-angle-right text-dark"></i>
-                </a>
-            </div> {% endcomment %}
+            <img class="w-100 h-100" src="{{products.image.url}}" alt="Image">   
         </div>
-
         <div class="col-lg-7 pb-5">
+            <button hidden id="id" value="{{products.id}}"></button>
+            <h3 id="alertmessage"></h3>
             <h3 class="font-weight-semi-bold">{{products.name}}</h3>
             <div class="d-flex mb-3">
                 <div class="text-primary mr-2">
@@ -50,8 +30,8 @@
                 
                     {% for s in size %}
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="custom-control-input size" onclick="displayRadioValue()" id="{{s.id}}" name="size" value="{{s.name}}">
-                        <label class="custom-control-label" for="{{s.id}}">{{s.name}}</label>
+                        <input type="radio" class="custom-control-input size" onclick="displayRadioValue()" id="{{s.name}}" name="size" value="{{s.name}}">
+                        <label class="custom-control-label" for="{{s.name}}">{{s.name}}</label>
                     </div>
                     {% endfor %}
                     <div id="clothsize"></div>
@@ -62,8 +42,8 @@
             
                     {% for c in color %}
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="custom-control-input"  id="{{c.id}}" onclick="displayRadioValue()"  name="color" value="{{c.name}}">
-                        <label class="custom-control-label" for="{{c.id}}">{{c.name}}</label>   
+                        <input type="radio" class="custom-control-input"  id="{{c.name}}" onclick="displayRadioValue()"  name="color" value="{{c.name}}">
+                        <label class="custom-control-label" for="{{c.name}}">{{c.name}}</label>   
                     </div>
                     {% endfor %}
                     <div id="clothcolor"></div>
@@ -77,7 +57,7 @@
                             </button>
                         </div>  
 
-                        <input type="number" name="quantity" id = "quantity" class="form-control bg-secondary text-center" value="1">
+                        <input type="text" name="quantity" id = "quantity" class="form-control bg-secondary text-center" value="1">
                         <div class="input-group-btn">
                             <button class="btn btn-primary btn-plus">
                                 <i class="fa fa-plus"></i>
@@ -164,7 +144,7 @@
                         <div class="col-md-6">
                             <h4 class="mb-4">1 review for "Colorful Stylish Shirt"</h4>
                             <div class="media mb-4">
-                                <img src="img/user.jpg" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
+                                
                                 <div class="media-body">
                                     <h6>John Doe<small> - <i>01 Jan 2045</i></small></h6>
                                     <div class="text-primary mb-2">
@@ -265,6 +245,11 @@
             }
         }
     }
+    function suceessmessage(){
+        document.getElementById("alertmessage").innerHTML = "Item is added to cart successfully"
+        const list = document.getElementById("alertmessage").classList;
+        list.add("alert-success");
+    }
     $("#submit").click(function(e){
         
         e.preventDefault();
@@ -278,11 +263,16 @@
                 quantity:$('#quantity').val(),
                 csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val(),
             },
-            success: function (data){
-                
+            success:function(response){
+               console.log(response.message)
+               document.getElementById("alertmessage").innerHTML = response.message;
+               const list1 = document.getElementById("alertmessage").classList;
+               list1.add("alert-danger");
             }
+            
         });
     });
 </script>
 <!-- Products End -->
+ {% comment %} window.history.pushState("sdf","asdf","{% url 'showcart' user.id %}"); {% endcomment %}
 {% endblock %}
