--- a/templates/customer/cart.html
+++ b/templates/customer/cart.html
@@ -95,7 +95,7 @@
                         <h5 class="font-weight-bold">Total</h5>
                         <h5 class="font-weight-bold">Rs.{{cart.total_price}}</h5>
                     </div>
-                    <button class="btn btn-block btn-primary my-3 py-3">Proceed To Checkout</button>
+                    <a href="{% url "checkout" request.user.id %}" class="btn btn-block btn-primary my-3 py-3">Proceed To Checkout</a>
                 </div>
             </div>
         </div>
